SOW-1926: Fixing tophat alignment

--- a/smokefree/sites/all/themes/smokefreegov/src/scss/tophat.scss
+++ b/smokefree/sites/all/themes/smokefreegov/src/scss/tophat.scss
@@ -32,6 +32,7 @@ nav.TopHat {
     ul.navbar-nav {
         margin-bottom: 0;
         margin-top:0;
+        padding-left: 2%;
     }
 
     ul.navbar-nav>li {
